Revert "Feature/add validation (#7)"
This reverts commit cad6cd4aed762a1d5cd9c17c63e30ab3bb799c3d.

--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,7 @@
   "autoload": {
     "psr-4": {
       "Framework\\": "Framework/",
-      "App\\": "App/",
-      "Helper\\": "Helper/"
+      "App\\": "App/"
     }
   }
 }
